--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>GameStudy</title>
   </head>
 
-  <body>
+  <body oncontextmenu="return false;">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
